STERICMS-828-grid-am: Fix issues related to the grid and spacing

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1377,7 +1377,7 @@ main .section.contact-us-title > .default-content-wrapper {
     {
         display: grid;
         grid-template-columns: 1fr;
-        padding: 32px 24px 32px;
+        padding: 32px 24px 32px 0;
         margin: 0 auto;
         overflow: hidden;
 
